:dash: 修复 URL 问题

--- a/src/html/day1.pug
+++ b/src/html/day1.pug
@@ -6,4 +6,4 @@ block center-title
 
 block content
   video#player(playsinline controls poster="https://images.pexels.com/photos/1046350/pexels-photo-1046350.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
-    source(src="assert/day1.mp4")
+    source(src="http://miyogurt.github.io/ps-xiuxian/assert/day1.mp4")
