--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -6,6 +6,6 @@ block center-title
 block content
 
   .flex.ui
-    a.item(href="/day1.html")
+    a.item(href="./day1.html")
       img(src="https://images.pexels.com/photos/1046350/pexels-photo-1046350.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
       h4 第一天：通道抠图
