--- a/src/html/layout.pug
+++ b/src/html/layout.pug
@@ -8,7 +8,7 @@ html(lang="zh-CN")
     link(href="https://cdn.bootcss.com/plyr/3.2.1/plyr.css" rel="stylesheet")
     link(href="https://cdn.bootcss.com/plyr/3.2.1/plyr.svg" rel="preload"  as="font" type="image/svg+xml" crossorigin="anonymous")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
-    <base href="." />
+    link(rel="shortcut icon", href="./assert/favicon.ico", type="image/x-icon")
   body
     nav.sticky
       section
