--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -8,4 +8,7 @@ block content
   .flex.ui
     a.item(href="./day1.html")
       img(src="https://images.pexels.com/photos/1046350/pexels-photo-1046350.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
-      h4 第一天：通道抠图
+      h4 第一天：通道抠图    
+    a.item(href="./day2.html")
+      img(src="https://images.pexels.com/photos/136255/pexels-photo-136255.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940")
+      h4 第二天：点石成金
