--- a/src/html/layout.pug
+++ b/src/html/layout.pug
@@ -23,7 +23,8 @@ html(lang="zh-CN")
         ul.no-style
           block menu
             li: a(href="/", title="Home") 🚩 首页
-            li: a(href="./day1.html", title="Home") 💎 第一天: 通道抠图
+            li: a(href="./day1.html", title="day1") 💎 第一天: 通道抠图
+            li: a(href="./day2.html", title="day2") 💰 第二天：点石成金
       section
           block content
     script(src="https://cdn.bootcss.com/plyr/3.2.1/plyr.polyfilled.min.js")
