--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -7,6 +7,9 @@
   font-size: 15px
   box-sizing: border-box
 
+body
+  min-height: 101vh
+
 .ui
   a
     text-decoration: none
@@ -166,6 +169,10 @@ video
 .flex
   display: flex
   .item
-    width: 32%
+    width: 48%
     display: block
-    margin-right: 1%
+    margin: 2% 4% 2% 2%
+    &:last-of-type
+      margin-right: 2%
+    h4
+      margin-top: 5%
