--- a/src/sass/menu.sass
+++ b/src/sass/menu.sass
@@ -26,8 +26,12 @@ nav ~ section.page
     display: block
   & > section
     background: $little-background
-    width: 78%
     margin-left: 1%
+    margin-right: 1%
+    padding: 0
+    width: 77%
+    div
+      margin: 0
     +touch
       position: static
       display: block
