--- a/src/html/layout.pug
+++ b/src/html/layout.pug
@@ -25,6 +25,9 @@ html(lang="zh-CN")
             li: a(href="/", title="Home") 🚩 首页
             li: a(href="./day1.html", title="day1") 💎 第一天: 通道抠图
             li: a(href="./day2.html", title="day2") 💰 第二天：点石成金
+            li: a(href="./day3.html", title="day3") 🐱 第三天：材料 - 金属
+            li: a(href="./day4.html", title="day4") 🐱 第四天：材料 - 水晶
+            li: a(href="./day5.html", title="day5") 🐱 第五天：材料 - 木质
       section
           block content
     script(src="https://cdn.bootcss.com/plyr/3.2.1/plyr.polyfilled.min.js")
