--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -159,19 +159,21 @@ body
 
 .plyr
   margin-top: 1rem
-  
+
 video
   background: #fff
   width: 100%
   max-width: 100%
   object-fit: cover
-  
+
 .flex
   display: flex
+  flex-wrap: wrap
+  justify-content: space-between
   .item
-    width: 48%
+    width: 45%
     display: block
-    margin: 2% 4% 2% 2%
+    margin: 2% 2% 2% 2%
     &:last-of-type
       margin-right: 2%
     h4
