--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -13,11 +13,14 @@ block content
       img(src="https://images.pexels.com/photos/136255/pexels-photo-136255.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940")
       h4 第二天：点石成金
     a.item(href="./day3.html")
-      img(src="https://images.pexels.com/photos/114979/pexels-photo-114979.jpeg?auto=compress&cs=tinysrgb&h=350")
+      img(src="https://images.pexels.com/photos/114979/pexels-photo-114979.jpeg?auto=compress&cs=tinysrgb&h=750")
       h4 第三天：材料 - 金属
     a.item(href="./day4.html")
-      img(src="https://images.pexels.com/photos/688559/pexels-photo-688559.jpeg?auto=compress&cs=tinysrgb&h=350")
+      img(src="https://images.pexels.com/photos/688559/pexels-photo-688559.jpeg?auto=compress&cs=tinysrgb&h=750")
       h4 第四天：材料 - 水晶
     a.item(href="./day5.html")
-      img(src="https://images.pexels.com/photos/1098820/pexels-photo-1098820.jpeg?auto=compress&cs=tinysrgb&h=350")
+      img(src="https://images.pexels.com/photos/1098820/pexels-photo-1098820.jpeg?auto=compress&cs=tinysrgb&h=750")
       h4 第五天：材料 - 木质
+    a.item(href="./day6.html")
+      img(src="https://images.pexels.com/photos/201101/pexels-photo-201101.jpeg?auto=compress&cs=tinysrgb&h=750")
+      h4 第六天：时钟
