--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -24,3 +24,6 @@ block content
     a.item(href="./day6.html")
       img(src="https://images.pexels.com/photos/201101/pexels-photo-201101.jpeg?auto=compress&cs=tinysrgb&h=750")
       h4 第六天：时钟
+    a.item(href="./day7.html")
+      img(src="https://images.pexels.com/photos/91228/pexels-photo-91228.jpeg?auto=compress&cs=tinysrgb&h=750")
+      h4 第七天：风化文字
