--- a/src/html/layout.pug
+++ b/src/html/layout.pug
@@ -29,6 +29,7 @@ html(lang="zh-CN")
             li: a(href="./day4.html", title="day4") 🐱 第四天：材料 - 水晶
             li: a(href="./day5.html", title="day5") 🐱 第五天：材料 - 木质
             li: a(href="./day6.html", title="day6") ⏰ 第六天：时钟
+            li: a(href="./day7.html", title="day7") ☃️ 第七天：风化文字
       section
           block content
     script(src="https://cdn.bootcss.com/plyr/3.2.1/plyr.polyfilled.min.js")
